@@ -1,143 +1,0 @@
-begin_unit|revision:1.0.0;language:Java;cregit-version:0.0.1
-begin_comment
-comment|/*****************************************************************  *   Licensed to the Apache Software Foundation (ASF) under one  *  or more contributor license agreements.  See the NOTICE file  *  distributed with this work for additional information  *  regarding copyright ownership.  The ASF licenses this file  *  to you under the Apache License, Version 2.0 (the  *  "License"); you may not use this file except in compliance  *  with the License.  You may obtain a copy of the License at  *  *    http://www.apache.org/licenses/LICENSE-2.0  *  *  Unless required by applicable law or agreed to in writing,  *  software distributed under the License is distributed on an  *  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY  *  KIND, either express or implied.  See the License for the  *  specific language governing permissions and limitations  *  under the License.  ****************************************************************/
-end_comment
-
-begin_package
-package|package
-name|org
-operator|.
-name|apache
-operator|.
-name|cayenne
-operator|.
-name|modeler
-operator|.
-name|dialog
-operator|.
-name|db
-operator|.
-name|merge
-package|;
-end_package
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Collection
-import|;
-end_import
-
-begin_import
-import|import
-name|com
-operator|.
-name|jgoodies
-operator|.
-name|forms
-operator|.
-name|builder
-operator|.
-name|DefaultFormBuilder
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|cayenne
-operator|.
-name|modeler
-operator|.
-name|Application
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|cayenne
-operator|.
-name|modeler
-operator|.
-name|dialog
-operator|.
-name|db
-operator|.
-name|DbActionOptionsDialog
-import|;
-end_import
-
-begin_class
-specifier|public
-class|class
-name|DbMigrateOptionsDialog
-extends|extends
-name|DbActionOptionsDialog
-block|{
-specifier|public
-name|DbMigrateOptionsDialog
-parameter_list|(
-name|Collection
-argument_list|<
-name|String
-argument_list|>
-name|catalogs
-parameter_list|,
-name|Collection
-argument_list|<
-name|String
-argument_list|>
-name|schemas
-parameter_list|,
-name|String
-name|defaultCatalog
-parameter_list|,
-name|String
-name|defaultSchema
-parameter_list|)
-block|{
-name|super
-argument_list|(
-name|Application
-operator|.
-name|getFrame
-argument_list|()
-argument_list|,
-literal|"Migrate DB Schema: Select Catalog and Schema"
-argument_list|,
-name|catalogs
-argument_list|,
-name|schemas
-argument_list|,
-name|defaultCatalog
-argument_list|,
-name|defaultSchema
-argument_list|)
-expr_stmt|;
-block|}
-annotation|@
-name|Override
-specifier|protected
-name|void
-name|initForm
-parameter_list|(
-name|DefaultFormBuilder
-name|builder
-parameter_list|)
-block|{
-block|}
-block|}
-end_class
-
-end_unit
-
